--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ input, select {
     background-color: rgb(0, 168, 59)
 }
 
-.const-info {
+.cost-info {
     display: none;
     margin-top: 30px;
     font-size: 20px;
